# Research-Project

./: .gitignore  CHANGES.md  LICENSE  README.md  dune-project  opam-env.ps1  package.json  rizzo.opam
Notes/: 03-10-2025.md  07-11-2025.md  10-10-2025.md  10-12-2025.md  12-09-2025.md  17-10-2025.md  17-11-2025.md  19-09-2025.md  24-10-2025.md  31-10-2025.md  Links.md
Project-Description/: questions.md  take1.md
pdf/: main.tex  references.bib
pdf/appendix/: RizzoFlow.drawio  main.tex  program.tex
pdf/chapters/body/: background.tex  main.tex  preface.tex  rizzo_core.tex  summary.tex
pdf/chapters/conclusion/: main.tex  reflection.tex
pdf/chapters/introduction/: main.tex  motivation.tex  overview.tex
pdf/sections/body/: background.tex  main.tex  rizzo_core.tex  rizzo_impl.tex  rizzo_types.tex
pdf/sections/conclusion/: main.tex  reflection.tex
pdf/sections/introduction/: main.tex  motivation.tex  overview.tex  related-literature.tex
src/: CHANGES.md  Rizzo.opam  dune-project  rizzo.opam
src/lib/: channel.ml  channel.mli  dune  heap.ml  mainTypes.ml  mainTypes.mli  signal.ml  signal.mli  types.ml  types.mli
src/lib/internals/: heap.ml  mainTypes.ml  mainTypes.mli
src/test/: channels.ml  dune  test_Rizzo.ml  test_signal_lib.ml
