(lang dune 3.20)

(name Rizzo)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name Rizzo)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

(map_workspace_root false)
; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
